session3/networkpolicy/ornekler/allow-frontend-to-log-collector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-log-collector  # This policy allows frontend pods in the "default" namespace to access log-collector pods in the "logging" namespace
  namespace: logging  # The policy is defined in the "logging" namespace
spec:
  podSelector:
    matchLabels:
      app: log-collector  # This policy applies only to pods with the label "app: log-collector"
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: default  # Allows traffic only from pods in namespaces labeled "name: default"
      podSelector:
        matchLabels:
          app: frontend  # Allows traffic only from pods labeled "app: frontend"
  policyTypes:
  - Ingress  # The policy controls only incoming traffic (Ingress)
