session3/networkpolicy/ornekler/allow-opslab-1-to-opslab-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-opslab-1-to-opslab-2  # The policy name specifies that only the "opslab-1" pod is allowed to access the "opslab-2" pod
  namespace: default  # This policy is applicable within the "default" namespace
spec:
  podSelector:
    matchLabels:
      app: opslab-2  # This policy applies only to pods with the label "app: opslab-2"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: opslab-1  # Allows traffic only from pods with the label "app: opslab-1"
  policyTypes:
  - Ingress  # The policy type is limited to Ingress (incoming traffic) only; it restricts only incoming traffic

---
# name: The "allow-opslab-1-to-opslab-2" policy ensures that only the "opslab-1" pod is allowed to access the "opslab-2" pod.
#
# namespace: Specified as "default," meaning this policy applies to pods within the "default" namespace.
#
# podSelector: Targets pods labeled "app: opslab-2," meaning this policy controls incoming traffic to the "opslab-2" pod.
#
# ingress: The "from" clause with a podSelector ensures that traffic is allowed only from pods labeled "app: opslab-1." 
# All other traffic from any other pod is denied.
#
# policyTypes: Defined as Ingress, so the policy only restricts incoming traffic to the "opslab-2" pod. Outgoing traffic (Egress) is unaffected.
