session3/networkpolicy/ornekler/allow-prod-to-dev-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prod-to-dev  # This policy allows pods in the "prod" namespace to access pods in the "dev" namespace
  namespace: dev  # The policy is defined in the "dev" namespace and protects the pods within this namespace
spec:
  podSelector:
    matchLabels: {}  # When left empty, targets all pods within the "dev" namespace
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: prod  # Allows traffic only from namespaces with the label "name: prod"
  policyTypes:
  - Ingress  # This policy controls only incoming traffic (Ingress)
